compiler/test/fail_compilation/ice11963.d
/*
TEST_OUTPUT:
---
fail_compilation/ice11963.d(18): Error: unexpected `(` in declarator
A("")=
 ^
fail_compilation/ice11963.d(18): Error: identifier expected for template type parameter
A("")=
  ^
fail_compilation/ice11963.d(18): Error: no identifier for declarator `A`
A("")=
  ^
fail_compilation/ice11963.d(18): Error: declaration expected, not `""`
A("")=
  ^
---
*/
A("")=
